# docx

./: .gitignore  ARCHITECTURE_ROADMAP.md  DOCBOXRX_SPECS.md  SYSTEM_SPECS.md  TECH_SPECS.md  WHITE_PAPER.md  netlify.toml
docboxrx-backend/: Dockerfile  create_tables.py  fly.toml  pyproject.toml  test_vectorizer.py
docboxrx-backend/app/: database.py  db.py  email_ingest.py  main.py
docboxrx-backend/app/routers/: __init__.py  grid.py
docboxrx-backend/app/services/: __init__.py  grid.py  ingestion.py  prompts.py  router.py  vectorizer.py  zones.py
docboxrx-frontend/: index.html  package-lock.json  package.json  vite.config.ts
docboxrx-frontend/src/: App.css  App.tsx
docboxrx-frontend/src/components/: GridView.tsx
